--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
+  path_provider: ^2.0.11
+  share_plus: ^6.2.0
 
 dev_dependencies:
   flutter_test:
